lib/src/compiler/tests/testdata/errors/21.out
error[E100]: wrong type
 --> line:5:21
  |
5 |     any of them in (1.0..10)
  |                     ^^^ expression should be `integer`, but is `float`
  |